Corrección de Tooltip

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -3,8 +3,7 @@
         "header": {
             "login": "Login",
             "language": {
-                "en": "Change to English",
-                "es": "Change to Spanish"
+                "es": "Cambiar a Español"
             }
         },
         "hero": {
