Añadimos texto de cuando se va a aplicar la recurrencia

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -978,7 +978,8 @@
                     "recurrenceEndDate": "End date",
                     "weekly": "Weekly",
                     "monthly": "Monthly",
-                    "yearly": "Yearly"
+                    "yearly": "Yearly",
+                    "recurrenceDates": "Recurrence dates"
                 },
                 "placeholders": {
                     "description": "Enter description",
